Added PR label check workflow

--- a/.github/workflows/my-new-workflow.yaml
+++ b/.github/workflows/my-new-workflow.yaml
@@ -16,3 +16,8 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+      - run: |
+          for label in ${{ github.event.label.name }}; do
+            echo '$label'
+          done
+ 
