--- a/.github/workflows/pr-label-check.yaml
+++ b/.github/workflows/pr-label-check.yaml
@@ -1,30 +1,16 @@
 name: Check PR Labels
 
 on:
-  pull_request:
-    types: [opened, labeled, unlabeled, synchronize]
+  pull_request_target:
+    types: [ opened, labeled, unlabeled, synchronize ]
 
 jobs:
   check-labels:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Check PR labels
-        run: |
-          # Specify your 5 labels here
-          valid_labels=("bug", "documentation" ,"enhancement" ,"invalid", "question")
-
-          # Check if any of the valid labels are present
-          for label in "${valid_labels[@]}"; do
-            echo "$label"
-            echo "${{github.event.label.name}}"
-            if contains(${{github.event.label.name}}, '$label'); then
-              echo "PR has the '$label' label."
-              exit 0
-            fi
-          done
-
-          echo "PR does not have any of the valid labels."
-          exit 1
+        uses: jesusvasquez333/verify-pr-label-action@v1.4.0
+        with:
+          github-token: ${{ github.token }}
+          valid-labels: 'bug, dependencies, devops, enhancement, feature, tests, documentation'
+          pull-request-number: ${{ github.event.pull_request.number }}
