--- a/.github/workflows/deploy-test.yaml
+++ b/.github/workflows/deploy-test.yaml
@@ -1,20 +1,27 @@
-name: Check PR Labels
+name: Push image to ECR
 
 on:
   push:
-    branches: [ release ]
+    tags:
+      - '*'
 
 jobs:
   check-labels:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
+          aws-region: eu-north-1
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+          role-external-id: ${{ secrets.AWS_ROLE_EXTERNAL_ID }}
+          role-duration-seconds: 1200
+          role-session-name: MySessionName
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -25,7 +32,7 @@ jobs:
       - name: Build, tag, and push docker image to Amazon ECR
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: my-ecr-repo
+          REPOSITORY: templates
           IMAGE_TAG: ${{ github.sha }}
         run: |
           docker build -t  $REGISTRY/$REPOSITORY:$IMAGE_TAG --build-arg="REF=$IMAGE_TAG" .
