--- a/.github/workflows/my-new-workflow.yaml
+++ b/.github/workflows/my-new-workflow.yaml
@@ -20,4 +20,9 @@ jobs:
           for label in ${{ github.event.label.name }}; do
             echo '$label'
           done
+      - name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - name: Test
+        run: |
+          echo {{ env.RELEASE_VERSION }}
  
