--- a/.github/workflows/deploy-test.yaml
+++ b/.github/workflows/deploy-test.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Build, tag, and push docker image to Amazon ECR
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: my-ecr-repo
+          REPOSITORY: templates
           IMAGE_TAG: ${{ github.sha }}
         run: |
           docker build -t  $REGISTRY/$REPOSITORY:$IMAGE_TAG --build-arg="REF=$IMAGE_TAG" .
