--- a/.github/workflows/deploy-tag.yaml
+++ b/.github/workflows/deploy-tag.yaml
@@ -1,8 +1,9 @@
 name: Push image to ECR
 
 on:
-  push:
-    branches: [ release ]
+  create:
+    tags:
+      - '*'
 
 jobs:
   check-labels:
@@ -32,7 +33,7 @@ jobs:
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: templates
-          IMAGE_TAG: ${{ github.sha }}
+          IMAGE_TAG: ${{ github.ref }}
         run: |
           docker build -t  $REGISTRY/$REPOSITORY:$IMAGE_TAG --build-arg="REF=$IMAGE_TAG" .
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
