created a workflow to deploy tag into registry (#25)

--- a/.github/workflows/deploy-tag.yaml
+++ b/.github/workflows/deploy-tag.yaml
@@ -1,9 +1,12 @@
 name: Push image to ECR
 
 on:
-  create:
+  push:
     tags:
       - '*'
+  release:
+    types:
+      - prerelease
 
 jobs:
   check-labels:
