created a workflow to deploy tag into registry (#26)

--- a/.github/workflows/deploy-tag.yaml
+++ b/.github/workflows/deploy-tag.yaml
@@ -36,7 +36,7 @@ jobs:
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: templates
-          IMAGE_TAG: ${{ github.ref }}
+          IMAGE_TAG: ${{ github.ref_name }}
         run: |
           docker build -t  $REGISTRY/$REPOSITORY:$IMAGE_TAG --build-arg="REF=$IMAGE_TAG" .
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
